# omniflip

./: CImg.h  CMakeLists.txt  Makefile  README  fesGL  old.Makefile.fes  v.cpp  v.py  vGL.c  vGL.cpp
libiio/: iio.c  iio.h  read_exr_float.cpp
samples/: K  b  b2  k.pgm  k.tif  t
